branches/wip/Archive/1a98281781e36d96e641e1b9ce57e8d9-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:38:24: error: no match for ‘operator*’ (operand types are ‘w::wrapper<test>’ and ‘w::wrapper<test>’)
     w::wrapper<test>() * w::wrapper<test>();
                        ^
main.cpp:38:24: note: candidate is:
main.cpp:25:10: note: template<class T1, class T2> decltype ((w::unwrap(t1) * w::unwrap(t2))) w::operator*(const T1&, const T2&)
     auto operator *(T1 const&t1, T2 const&t2) -> decltype(unwrap(t1)*unwrap(t2)) {
          ^
main.cpp:25:10: note:   template argument deduction/substitution failed:
main.cpp: In substitution of ‘template<class T1, class T2> decltype ((w::unwrap(t1) * w::unwrap(t2))) w::operator*(const T1&, const T2&) [with T1 = w::wrapper<test>; T2 = w::wrapper<test>]’:
main.cpp:38:43:   required from here
main.cpp:25:69: error: no match for ‘operator*’ (operand types are ‘const test’ and ‘const test’)
     auto operator *(T1 const&t1, T2 const&t2) -> decltype(unwrap(t1)*unwrap(t2)) {
                                                                     ^
